--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "gox"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["norman784 <normanpaniagua@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+byteorder = "1.2.7"
