--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "gox"
-version = "0.3.0"
+version = "0.4.0"
 authors = ["norman784 <normanpaniagua@gmail.com>"]
 edition = "2018"
 description = "Library for loading Goxel .gox files."
@@ -14,5 +14,5 @@ readme = "Readme.md"
 license = "MIT/Apache-2.0"
 
 [dependencies]
-byteorder = "1.2.7"
-png = "0.13.2"
+byteorder = "^1.3.4"
+png = "^0.16.7"
